# separator-experiments

./: .gitmodules  CMakeLists.txt  headers.hpp  main.cpp
alg/: CentroidDecomposition.cpp  CentroidDecomposition.h  CentroidDecomposition.hpp  LinearSeparator.cpp  LinearSeparator.h  LinearSeparator.hpp  Oracle.cpp  Oracle.hpp  Separator.cpp  Separator.hpp  TreeSeparator.cpp  TreeSeparator.hpp
model/: Edge.cpp  Edge.hpp  Graph.cpp  Graph.hpp  Node.cpp  Node.hpp  Tree.cpp  Tree.hpp  model.cpp  model.hpp  modeltypes.hpp
report/: Linear-Separator.nb  Requirements.nb
util/: funcutils.hpp  parallelutils.hpp  printutils.hpp  progutils.hpp  randutils.hpp  stlutils.hpp
